# cam-desktop

./: .editorconfig  .gitignore  CMakeLists.txt  DesktopFrontendServer.cpp  DesktopFrontendServer.h  MockMainWorkspace.h  NMainWindow.cpp  NMainWindow.h  QCefRuntime.cpp  README.md  TitleBarUserChip.cpp  TitleBarUserChip.h  coding_style.md  probe_encoding.py
cloud-server/: cloud_server_config.h  desktop_runtime_injection.cpp  desktop_web_server.cpp  desktop_web_server.h  local_files_snapshot.cpp  title_bar_user_chip.cpp  title_bar_user_chip.h  user_auth_service.cpp  user_auth_service.h
cloud_server/: CMakeLists.txt  account_auth_dialog.cpp  account_auth_dialog.h  api_response.cpp  api_response.h  auth_http_client.cpp  auth_http_client.h  cloud_file_service.cpp  cloud_file_service.h  cloud_file_state.h  cloud_server_config.h  cloud_server_global.h  cloud_server_zh_CN.ts  desktop_runtime_injection.cpp  desktop_runtime_injection.h  desktop_web.h  desktop_web_server.cpp  desktop_web_server.h  file_api_service.cpp  file_api_service.h  file_manager_view.cpp  file_manager_view.h  local_auth_sync_channel.cpp  local_auth_sync_channel.h  local_files_snapshot.cpp  local_files_snapshot.h  login_web_auth_helpers.cpp  login_web_auth_helpers.h  open_request_context.h  q_cef_runtime.cpp  q_cef_runtime.h  title_bar_user_chip.cpp  title_bar_user_chip.h  upload_picker_dialog.cpp  upload_picker_dialog.h  user_auth_service.cpp  user_auth_service.h  user_session.cpp  user_session.h
common/namespace/: qj_namespace_def.h
project_management/: CMakeLists.txt  cam_options.cpp  cam_options.h  project_global.h
qjcam/: CMakeLists.txt  main.cpp  qjcam.qrc
ultramill/: CMakeLists.txt  cloud_controller.cpp  cloud_controller.h  desktop_frontend_server.cpp  desktop_frontend_server.h  home_workspace.cpp  home_workspace.h  mock_main_workspace.h  napplication.cpp  napplication.h  nmainwindow.cpp  nmainwindow.h  q_cef_runtime.cpp  q_cef_runtime.h  title_bar_user_chip.cpp  title_bar_user_chip.h  tool_lib_dialog.cpp  tool_lib_dialog.h  ultramill.qrc  ultramill_global.h  ultramill_zh_CN.ts  workspace_file_context.h
user/: AccountAuthDialog.cpp  AuthHttpClient.cpp  CMakeLists.txt  DesktopWeb.h  FileManagerView.cpp  FileManagerView.h  LocalFilesBridge.h  LoginWebAuthHelpers.cpp  UserAuthService.cpp  UserAuthService.h  UserModuleConfig.h  account_auth_dialog.cpp  account_auth_dialog.h  auth_http_client.cpp  auth_http_client.h  desktop_auth_messages.h  desktop_runtime_injection.cpp  desktop_runtime_injection.h  desktop_web.h  desktop_web_server.cpp  desktop_web_server.h  file_manager_view.cpp  file_manager_view.h  local_files_snapshot.cpp  local_files_snapshot.h  login_web_auth_helpers.cpp  login_web_auth_helpers.h  q_cef_runtime.cpp  q_cef_runtime.h  title_bar_user_chip.cpp  title_bar_user_chip.h  user_auth_service.cpp  user_auth_service.h  user_module_config.h  user_session.cpp  user_session.h
